adds exception handlers from activities. Adds basic crud for properties, skeleton for survey and funcitioning basic create and update methods for activities. Adds migration to fix and match databases specifications. Adds docker-entrypoint to run migrations when deploying with Docker-compose. Updates gitignore. Adds datetiem support for serializing. Adds enums class to better handling in requests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: my_db_for_django3
     image: postgres
     environment:
-      - POSTGRES_NAME=postgres
+      - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     ports:
@@ -20,10 +20,8 @@ services:
       - .:/code
     ports:
       - "8000:8000"
-    environment:
-      - POSTGRES_NAME=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
+    env_file:
+      - ./django.env
     depends_on:
       - db
 
